--- a/index.html
+++ b/index.html
@@ -2,35 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Socket.IO Chat</title>
+    <title>Chat App</title>
     <style>
-     * { margin: 0; padding: 0; box-sizing: border-box; }
-     body { font: 13px Helvetica, Arial; }
-     form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-     form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-     form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-     #messages { list-style-type: none; margin: 0; padding: 0; }
-     #messages li { padding: 5px 10px; }
-     #messages li:nth-child(odd) { background: #eee; }
-   </style>
-   <script src="/socket.io/socket.io.js"></script>
-   <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+      * { margin: 0; padding: 0; box-sizing: border-box; }
+      body { font: 13px Helvetica, Arial; }
+      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+      #messages { list-style-type: none; margin: 0; padding: 0; }
+      #messages li { padding: 5px 10px; }
+      #messages li:nth-child(odd) { background: #eee; }
+    </style>
   </head>
   <body>
+    <!-- Message List  -->
     <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+
+    <!-- New Message  -->
+    <form id="new-message" action="">
+      <input id="message" autocomplete="off" />
+      <button>Send</button>
     </form>
+
+    <script src="/socket.io/socket.io.js"></script>
     <script>
-    var socket = io();
-    $("form").submit(function(){
-      socket.emit("chat message", $("#m").val());
-      $("#m").val("");
-      return false;
-    });
-    socket.on("chat message", function(msg){
-      $("#messages").append($("<li>").text(msg));
-    });
+     // Initialize client socket
+      var socket = io();
+      // Cache reference to elements
+      var els = {
+        input: document.getElementById('message'),
+        form:  document.getElementById('new-message'),
+        list:  document.getElementById('messages')
+      }
+      // When a user enters a new message...
+      els.form.addEventListener("submit", function (e) {
+        e.preventDefault();
+        // Broadcast event to server, pass along data
+        socket.emit('chat message', els.input.value);
+        els.input.value = "";
+        return false
+      })
+      // When the server sends back the new message...
+      socket.on('chat message', function(msg){
+        // Display the message to the user
+        var newMessage = document.createElement("li");
+        newMessage.innerText = msg;
+        els.list.appendChild(newMessage);
+      });
     </script>
   </body>
 </html>
